--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "openair"]
+	path = openair
+	url = https://github.com/davidcarslaw/openair
+	shallow = true
+	registered = true
+[submodule "worldmet"]
+	path = worldmet
+	url = https://github.com/davidcarslaw/worldmet
+	shallow = true
+	registered = true
